deploy/kubernetes/system/kyverno/policies/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
  annotations:
    policies.kyverno.io/title: Require Signed Images
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy ensures that all images deployed into the `soc` namespace
      are cryptographically signed using our Cosign key pair, mitigating
      unauthorized image execution and supply chain risks.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-image
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - soc
      verifyImages:
      - imageReferences:
        - "*"
        mutateDigest: true
        verifyDigest: false
        required: true
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEwm3zYQ72eqdqgVC+TSHCUO+B+oYm
[...]
                -----END PUBLIC KEY-----
